--- a/index.html
+++ b/index.html
@@ -23,42 +23,40 @@
                 <a href="#">Select Region</a>
             </div>
             <div class="topbar-cart">
-                <a href="#">购物车<span>（0）</span></a>
+                <a href="#"><i>&#xe60c;</i>购物车<span>（0）</span></a>
             </div>
             <div class="topbar-info">
                 <a href="#">登录</a><span>|</span>
                 <a href="#">注册</a><span>|</span>
                 <a href="#">消息通知</a>
             </div>
-
         </div>
     </div>
 </div>
-<div class="header">
+<div class="site-header">
     <div class="container">
         <div class="header-logo"><a href=""></a></div>
-        <div class="header-nav">全部商品分类
-            手机 电话卡
-            电视 盒子
-            笔记本 平板
-            家电 插线板
-            出行 穿戴
-            智能 路由器
-            电源 配件
-            健康 儿童
-            耳机 音箱
-            生活 箱包
-            小米手机
-            红米
-            电视
-            笔记本
-            空调
-            新品
-            路由器
-            智能硬件
-            服务
-            社区</div>
-        <div class="header-search"></div>
+        <div class="header-nav">
+            <ul>
+                <li><a href="">全部商品分类</a></li>
+                <li><a href="">小米手机</a></li>
+                <li><a href="">红米</a></li>
+                <li><a href="">电视</a></li>
+                <li><a href="">笔记本</a></li>
+                <li><a href="">空调</a></li>
+                <li><a href="">新品</a></li>
+                <li><a href="">路由器</a></li>
+                <li><a href="">智能硬件</a></li>
+                <li><a href="">服务</a></li>
+                <li><a href="">社区</a></li>
+            </ul>
+        </div>
+        <div class="header-search">
+            <form action="">
+                <input class="search-text" type="search" id="search" name="keyword" autocomplete="off" data-search-config="{'defaultWords':[{'Key':'小米6X','Rst':6},{'Key':'小米MIX&nbsp;2S','Rst':5},{'Key':'黑鲨游戏手机','Rst':3},{'Key':'红米Note&nbsp;5','Rst':6},{'Key':'红米5A','Rst':13},{'Key':'小米电视4C','Rst':5},{'Key':'电视32英寸','Rst':3},{'Key':'笔记本pro','Rst':5},{'Key':'空气净化器','Rst':11},{'Key':'净水器','Rst':8}]}">
+                <input type="submit" class="search-btn iconfont" value="">
+            </form>
+        </div>
     </div>
 </div>
 </body>
