--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#">Select Region</a>
             </div>
             <div class="topbar-cart">
-                <a href="#"><i>&#xe60c;</i>购物车<span>（0）</span></a>
+                <a href="#"><i class="iconfont">&#xe618;</i>购物车<span>（0）</span></a>
             </div>
             <div class="topbar-info">
                 <a href="#">登录</a><span>|</span>
@@ -35,29 +35,65 @@
 </div>
 <div class="site-header">
     <div class="container">
-        <div class="header-logo"><a href=""></a></div>
+        <div class="header-logo"><a href="#">小米官网</a></div>
         <div class="header-nav">
             <ul>
                 <li><a href="">全部商品分类</a></li>
-                <li><a href="">小米手机</a></li>
-                <li><a href="">红米</a></li>
-                <li><a href="">电视</a></li>
-                <li><a href="">笔记本</a></li>
-                <li><a href="">空调</a></li>
-                <li><a href="">新品</a></li>
-                <li><a href="">路由器</a></li>
-                <li><a href="">智能硬件</a></li>
-                <li><a href="">服务</a></li>
-                <li><a href="">社区</a></li>
+                <li class="nav-item"><a href="">小米手机</a></li>
+                <li class="nav-item"><a href="">红米</a></li>
+                <li class="nav-item"><a href="">电视</a></li>
+                <li class="nav-item"><a href="">笔记本</a></li>
+                <li class="nav-item"><a href="">空调</a></li>
+                <li class="nav-item"><a href="">新品</a></li>
+                <li class="nav-item"><a href="">路由器</a></li>
+                <li class="nav-item"><a href="">智能硬件</a></li>
+                <li class="nav-item"><a href="">服务</a></li>
+                <li class="nav-item"><a href="">社区</a></li>
             </ul>
         </div>
         <div class="header-search">
-            <form action="">
-                <input class="search-text" type="search" id="search" name="keyword" autocomplete="off" data-search-config="{'defaultWords':[{'Key':'小米6X','Rst':6},{'Key':'小米MIX&nbsp;2S','Rst':5},{'Key':'黑鲨游戏手机','Rst':3},{'Key':'红米Note&nbsp;5','Rst':6},{'Key':'红米5A','Rst':13},{'Key':'小米电视4C','Rst':5},{'Key':'电视32英寸','Rst':3},{'Key':'笔记本pro','Rst':5},{'Key':'空气净化器','Rst':11},{'Key':'净水器','Rst':8}]}">
-                <input type="submit" class="search-btn iconfont" value="">
+            <form action="" class="search-form">
+                <label for="search" class="hide">站内搜索</label>
+                <input class="search-text" value="小米8 小米MIX 2S" type="search" id="search" name="keyword" autocomplete="off" data-search-config="{'defaultWords':[{'Key':'小米6X','Rst':6},{'Key':'小米MIX&nbsp;2S','Rst':5},{'Key':'黑鲨游戏手机','Rst':3},{'Key':'红米Note&nbsp;5','Rst':6},{'Key':'红米5A','Rst':13},{'Key':'小米电视4C','Rst':5},{'Key':'电视32英寸','Rst':3},{'Key':'笔记本pro','Rst':5},{'Key':'空气净化器','Rst':11},{'Key':'净水器','Rst':8}]}">
+                <input type="submit" class="search-btn iconfont" value="&#xe678;">
             </form>
         </div>
     </div>
 </div>
+<div class="seckill">
+    <div class="seckill-head">
+        <h1>小米闪购</h1>
+    </div>
+    <div class="container J_seckill">
+        <div class="seckill-banner J_seckillBannerWrap">
+            <!--<div class="container J_seckillBanner relative">-->
+                <ul>
+                    <li><em>22:00</em><span><em>抢购中<br>距结束 00:04:32</em></span></li>
+                    <li><span><em>00:00</em><span>明日开始</span></li>
+                    <li><span><em>08:00</em><span>明日开始</span></li>
+                    <li><span><em>10:00</em><span>明日开始</span></li>
+                    <li><span><em>12:00</em><span>明日开始</span></li>
+                </ul>
+            <!--</div>-->
+        </div>
+        <div class="seckill-con">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+    <div class="container notic"></div>
+</div>
+<div class="site-footer"></div>
+<div class="site-info"></div>
 </body>
 </html>
