添加商品信息

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
         <div class="seckill-banner J_seckillBannerWrap">
             <!--<div class="container J_seckillBanner relative">-->
                 <ul>
-                    <li><em>22:00</em><span><em>抢购中<br>距结束 00:04:32</em></span></li>
+                    <li>
+						<em>22:00</em>
+						<span>
+							<em>抢购中<br>距结束 00:04:32</em>
+						</span>
+					</li>
                     <li><span><em>00:00</em><span>明日开始</span></li>
                     <li><span><em>08:00</em><span>明日开始</span></li>
                     <li><span><em>10:00</em><span>明日开始</span></li>
@@ -78,9 +83,45 @@
         </div>
         <div class="seckill-con">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+					<a href='#'>
+						<div class='bg'>
+							<img src='https://i8.mifile.cn/b2c-mimall-media/35abcae1b46cf8f0284bcfd33163a1f3.png'>
+						</div>
+						<div class='info'>
+							<span class='name'>小米6X 4GB+64GB 樱花粉</span>
+							<span class='desc'>轻薄美观的拍照手机/前置2000万“治愈系”自拍/后置2000万 AI双摄/</span>
+							<span class='price'>1199.00元<del>1599元</del></span>
+							<a href='#'><span class='btn btn-green btn-small btn-primary J_login'>登录后抢购</span></a>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href='#'>
+						<div class='bg'>
+							<img src='https://i8.mifile.cn/b2c-mimall-media/c2a2741556bcc90b318a1e1a51bd0ef4.png'>
+						</div>
+						<div class='info'>
+							<span class='name'>15.6"笔记本 i5 4G MX110 深空灰</span>
+							<span class='desc'>全面均衡的国民轻薄本</span>
+							<span class='price'>3799.00元<del>4199元</del></span>
+							<a href='#'><span class='btn btn-green btn-small btn-primary J_login'>登录后抢购</span></a>
+						</div>
+					</a>
+				</li>
+                <li>
+					<a href='#'>
+						<div class='bg'>
+							<img src='https://i8.mifile.cn/b2c-mimall-media/35abcae1b46cf8f0284bcfd33163a1f3.png'>
+						</div>
+						<div class='info'>
+							<span class='name'>小米6X 4GB+64GB 樱花粉</span>
+							<span class='desc'>轻薄美观的拍照手机/前置2000万“治愈系”自拍/后置2000万 AI双摄/</span>
+							<span class='price'>1199.00元<del>1599元</del></span>
+							<a href='#'><span class='btn btn-green btn-small btn-primary J_login'>登录后抢购</span></a>
+						</div>
+					</a>
+				</li>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -91,7 +132,9 @@
             </ul>
         </div>
     </div>
-    <div class="container notic"></div>
+    <div class="container notic">
+	<p>*小米闪购活动规则：小米闪购商品不享受该商品在小米商城的其他优惠政策（包括但不限于优惠券、赠品、满减、满赠等）<br>
+温馨提示：因可能存在系统缓存、页面更新导致价格变动异常等不确定性情况出现，如您发现活动商品标价或促销信息有异常，请您立即联系小米客服，以便我们及时补正。</p></div>
 </div>
 <div class="site-footer"></div>
 <div class="site-info"></div>
