--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <li class="active">
 						<em>22:00</em>
 						<span>
-							<em>抢购中<br>距结束 00:04:32</em>
+							<em id="timer"></em>
 						</span>
 					</li>
                     <li><em>00:00</em><span>明日开始</span></li>
@@ -557,19 +557,73 @@
 <div class="site-footer">
     <div class="container">
         <div class="footer-service">
-            <ul>
+            <ul class="clearfix">
                 <li>
-                    <a href=""><i></i>预约维修服务</a>
+                    <a href="#"><i class="iconfont">&#xe62d;</i>预约维修服务</a>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="#"><i class="iconfont">&#xe607;</i>7天无理由退货</a>
+                </li>
+                <li>
+                    <a href="#"><i class="iconfont">&#xe606;</i>15天免费换货</a>
+                </li>
+                <li>
+                    <a href="#"><i class="iconfont">&#xe787;</i>满150元包邮</a>
+                </li>
+                <li>
+                    <a href="#"><i class="iconfont">&#xe60a;</i>520余家售后网点</a>
+                </li>
             </ul>
+        </div>
+        <div class="footer-links clearfix">
+            <dl>
+                <dt>帮助中心</dt>
+                <dd><a href="#">账户管理</a></dd>
+                <dd><a href="#">购物指南</a></dd>
+                <dd><a href="#">订单操作</a></dd>
+            </dl>
+            <dl>
+                <dt>服务支持</dt>
+                <dd><a href="#">账户管理</a></dd>
+                <dd><a href="#">购物指南</a></dd>
+                <dd><a href="#">订单操作</a></dd>
+            </dl>
+            <dl>
+                <dt>线下门店</dt>
+                <dd><a href="#">账户管理</a></dd>
+                <dd><a href="#">购物指南</a></dd>
+                <dd><a href="#">订单操作</a></dd>
+            </dl>
+            <dl>
+                <dt>关于小米</dt>
+                <dd><a href="#">账户管理</a></dd>
+                <dd><a href="#">购物指南</a></dd>
+                <dd><a href="#">订单操作</a></dd>
+            </dl>
+            <dl>
+                <dt>关注我们</dt>
+                <dd><a href="#">账户管理</a></dd>
+                <dd><a href="#">购物指南</a></dd>
+                <dd><a href="#">订单操作</a></dd>
+            </dl>
+            <dl>
+                <dt>特色服务</dt>
+                <dd><a href="#">账户管理</a></dd>
+                <dd><a href="#">购物指南</a></dd>
+                <dd><a href="#">订单操作</a></dd>
+            </dl>
+            <div class="col-contact">
+                <p class="phone">400-100-5678</p>
+                <p>周一至周日 8:00-18:00<br>（仅收市话费）</p>
+                <a href="#"><i class="iconfont"></i>联系客服</a>
+            </div>
         </div>
     </div>
 </div>
-<div class="site-info"></div>
+<div class="site-info">
+    <div class="container"></div>
+    <div class="slogan">探索黑科技，小米为发烧而生</div>
+</div>
 <script src="javascript/xiaomishangou.js"></script>
 </body>
 </html>
