--- a/index.html
+++ b/index.html
@@ -621,7 +621,63 @@
     </div>
 </div>
 <div class="site-info">
-    <div class="container"></div>
+    <div class="container">
+        <div class="logo">小米官网</div>
+        <div class="info-text">
+            <p>
+                <a href="#">小米商城</a>
+                <span>|</span>
+                <a href="#">MIUI</a>
+                <span>|</span>
+                <a href="#">米家</a>
+                <span>|</span>
+                <a href="#">米聊</a>
+                <span>|</span>
+                <a href="#">多看</a>
+                <span>|</span>
+                <a href="#">游戏</a>
+                <span>|</span>
+                <a href="#">路由器</a>
+                <span>|</span>
+                <a href="#">米粉卡</a>
+                <span>|</span>
+                <a href="#">政企服务</a>
+                <span>|</span>
+                <a href="#">小米天猫店</a>
+                <span>|</span>
+                <a href="#">隐私政策</a>
+                <span>|</span>
+                <a href="#">问题反馈</a>
+                <span>|</span>
+                <a href="#">廉正举报</a>
+                <span>|</span>
+                <a href="#">诚信合规</a>
+                <span>|</span>
+                <a href="#">Select Region</a>
+            </p>
+            <p>
+                ©
+                <a href="#">mi.com</a>
+                京ICP证110507号
+                <a href="#">京ICP备10046444号</a>
+                <a href="#">京公网安备11010802020134号 </a>
+                <a href="#">京网文[2017]1530-131号</a>
+                <br>
+                <a href="#">（京）网械平台备字（2018）第00005号</a>
+                <a href="#">互联网药品信息服务资格证 (京) -非经营性-2014-0090</a>
+                <a href="#">营业执照</a>
+                <a href="#">医疗器械公告</a>
+                <br>违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
+            </p>
+        </div>
+        <div class="info-links">
+            <a href="#"><img src="https://i1.mifile.cn/f/i/17/site/truste.png" alt=""></a>
+            <a href="#"><img src="https://s01.mifile.cn/i/v-logo-2.png" alt=""></a>
+            <a href="#"><img src="https://s01.mifile.cn/i/v-logo-1.png" alt=""></a>
+            <a href="#"><img src="https://s01.mifile.cn/i/v-logo-3.png" alt=""></a>
+            <a href="#"><img src="https://i8.mifile.cn/b2c-mimall-media/ba10428a4f9495ac310fd0b5e0cf8370.png" alt=""></a>
+        </div>
+    </div>
     <div class="slogan">探索黑科技，小米为发烧而生</div>
 </div>
 <script src="javascript/xiaomishangou.js"></script>
